--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,9 @@ img {
     --light-text: #FFFFFF;
     --opacity-light: #E8EAEB;
 
+    /* Form */
+    --input-bg: #A8CAFB;
+
     /* Cases */
     --success: #2fd381;
     --danger: #D32F2F;
@@ -247,6 +250,52 @@ p {
     line-height: 12px;
     letter-spacing: 2%;
     font-weight: 700;
+}
+
+/* ------------------------------------------------------------------------------------ */
+/* Form */
+
+.input-container {
+    padding: 0;
+    margin: 0;
+    position: relative;
+    width: 100%;
+}
+
+.custom-input {
+    border: .5px solid var(--input-bg);
+    border-radius: 6px;
+
+    color: var(--primary-text);
+    padding: 17px 12px;
+    font-size: 14px;
+    line-height: 12px;
+    font-weight: 600;
+}
+
+.custom-input::placeholder {
+    opacity: 1;
+    color: var(--brand-primary) !important;
+    font-size: 14px;
+    line-height: 12px;
+    font-weight: 400;
+}
+
+textarea::placeholder {
+    opacity: 1;
+    color: var(--brand-primary) !important;
+    font-size: 14px;
+    line-height: 12px;
+    font-weight: 400;
+}
+
+
+.custom-input:active, .custom-input:focus {
+    outline: 1px solid var(--primary-text);
+}
+
+.custom-input:invalid {
+    outline: 1px solid var(--danger);
 }
 
 /* ------------------------------------------------------------------------------------ */
