--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,8 @@
     font-family: "Poppins", sans-serif;
     font-style: normal;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html, body {
@@ -10,6 +12,10 @@ html, body {
 
 img {
     display: block;
+}
+
+.w-fit-content {
+    width: fit-content !important;
 }
 
 .logo {
@@ -181,8 +187,8 @@ h1.smaller {
 }
 
 h1.bigger {
-    font-size: 83px;
-    line-height: 112px;
+    font-size: 80px;
+    line-height: 100px;
     letter-spacing: -2%;
     font-weight: 600;
 }
@@ -217,18 +223,6 @@ h3.bigger {
     font-weight: 600;
 }
 
-h3 {
-    font-size: 24px;
-    line-height: 29px;
-    font-weight: 600;
-}
-
-h3.bigger {
-    font-size: 26px;
-    line-height: 29px;
-    font-weight: 600;
-}
-
 h4 {
     font-size: 19px;
     line-height: 24px;
@@ -244,6 +238,12 @@ h5 {
 p {
     font-size: 13px;
     line-height: 21px;
+    font-weight: 500;
+}
+
+.caption {
+    font-size: 9px;
+    line-height: 12px;
     font-weight: 500;
 }
 
@@ -427,7 +427,17 @@ textarea::placeholder {
 /* Square Card */
 .square-card {
     border-radius: 12px;
-    box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.7);
+    box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.07);
+}
+
+/* Square Card */
+.big-square-card {
+    border-radius: 20px;
+    box-shadow: -7px 8px 29px 0 rgba(0, 0, 0, 0.07);
+}
+
+.big-square-padding {
+    padding: 76px 58px;
 }
 
 /* ------------------------------------------------------------------------------------ */
@@ -469,4 +479,34 @@ header.scrolled {
 
 .hero {
     padding-top: 206px;
+    padding-bottom: 100px;
+}
+
+.doctor-hero-img {
+    max-width: 517px;
+    transform: translate(40px, -24px);
+}
+
+.square-card-hero {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 9;
+    transform: translate(-70px, 70px);
+}
+
+
+/* ------------------------------------------------------------------------------------ */
+/* Por que a Imagenio? */
+
+.family-doctor-img {
+    max-width: 926px;
+}
+
+.square-card-why-imagenio {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    z-index: 9;
+    transform: translateY(-50%);
 }
