--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,8 @@
 
 html, body {
     overflow-x: hidden;
+    behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 ul, li {
@@ -546,6 +548,10 @@ header.scrolled {
     align-items: center;
     justify-content: flex-start;
     gap: 16px;
+
+    overflow-x: auto;
+    behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 .carroussel-card {
