--- a/style/style.css
+++ b/style/style.css
@@ -437,6 +437,11 @@ button {
         line-height: 10px;
     }
 
+    p.bigger {
+        font-size: 13px;
+        line-height: 20px;
+    }
+
     a {
         font-size: 11px;
         line-height: 15px;
@@ -650,6 +655,10 @@ textarea::placeholder {
 }
 
 @media screen and (max-width: 1200px) {
+    .card-top-bar {
+        transform: translateY(1px);
+    }
+
     .big-square-card {
         border-radius: 12px;
     }
@@ -796,6 +805,28 @@ header.scrolled {
     }
 }
 
+/* ------------------------------------------------------------------------------------ */
+/* fast-transfer */
+
+.fast-transfer h2 {
+    max-width: 395px; 
+    min-width: 395px;
+}
+
+@media screen and (max-width: 1200px) {
+    .fast-transfer h2 {
+        min-width: unset;
+        max-width: 357px;
+    }
+
+    .fast-transfer h3 {
+        max-width: 357px;
+    }
+
+    .mobile-cards-fast-transfer {
+        max-width: 360px;
+    }
+}
 
 /* ------------------------------------------------------------------------------------ */
 /* Por que a Imagenio? */
