--- a/style/style.css
+++ b/style/style.css
@@ -937,6 +937,52 @@ header.scrolled {
 @media screen and (max-width: 1200px) {
 }
 
+@media screen and (max-width: 992px) {
+    .carroussel-card {
+        height: 360px;
+        min-height: 360px;
+        max-height: 360px;
+
+        width: 48%;
+        min-width: 48%;
+        max-width: 48%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .carroussel-card {
+        height: 360px;
+        min-height: 360px;
+        max-height: 360px;
+
+        width: 97%;
+        min-width: 97%;
+        max-width: 97%;
+    }
+}
+
+/* ------------------------------------------------------------------------------------ */
+/*  Reduce-cost  */
+
+.reduce-cost h1 {
+    max-width: 610px;
+    min-width: 610px;
+}
+
+@media screen and (max-width: 1200px) {
+    .reduce-cost h1 {
+        max-width: 358px;
+        min-width: 358px;
+        margin: 0 auto;
+    }
+
+    .reduce-cost h3.image-h3 {
+        max-width: 358px;
+        min-width: 358px;
+        margin: 0 auto;
+    }
+}
+
 /* ------------------------------------------------------------------------------------ */
 /* Practicity */
 
