--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,23 @@ img {
     }
 }
 
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fade-in {
+    animation-name: fade-in;
+    animation-duration: .4s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
 /* ------------------------------------------------------------------------------------ */
 /* Variable Colors */
 :root {
@@ -92,7 +109,7 @@ img {
 }
 
 .brand-text {
-    color: var(--brand-primary);
+    color: var(--brand-primary) !important;
 }
 
 .brand-darker-text {
@@ -219,6 +236,12 @@ h3 {
     font-weight: 600;
 }
 
+h3.mid {
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 600;
+}
+
 h3.smaller {
     font-size: 20px;
     line-height: 26px;
@@ -235,6 +258,11 @@ h4 {
     font-size: 19px;
     line-height: 24px;
     font-weight: 600;
+}
+
+h4.bigger {
+    font-size: 20px;
+    line-height: 24px;
 }
 
 h5 {
@@ -340,6 +368,11 @@ button {
         line-height: 20px;
     }
 
+    h4.bigger {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
     h5 {
         font-size: 10px;
         line-height: 14px;
@@ -428,7 +461,7 @@ button {
     }
 
     h4.bigger {
-        font-size: 20px;
+        font-size: 16px;
         line-height: 24px;
     }
 
@@ -482,8 +515,8 @@ button {
 .input-container {
     padding: 0;
     margin: 0;
-    position: relative;
     width: 100%;
+    position: relative;
 }
 
 .custom-input {
@@ -495,6 +528,8 @@ button {
     font-size: 14px;
     line-height: 12px;
     font-weight: 600;
+
+    width: 100%;
 }
 
 .custom-input::placeholder {
@@ -513,13 +548,33 @@ textarea::placeholder {
     font-weight: 400;
 }
 
-
 .custom-input:active, .custom-input:focus {
     outline: 1px solid var(--primary-text);
 }
 
-.custom-input:invalid {
+.custom-input.error {
     outline: 1px solid var(--danger);
+    border-color: var(--danger);
+    padding-right: 30px;
+}
+
+.error-svg {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 12px;
+    opacity: 0;
+}
+
+.custom-input.error + .error-svg {
+    opacity: 1;
+}
+
+.error-message {
+    opacity: 0;
+    font-size: 12px;
+    font-weight: 500;
+    color: var(--danger);
 }
 
 @media screen and (max-width: 1200px) {
@@ -931,6 +986,10 @@ header.scrolled {
     padding-bottom: 8px;
 }
 
+.arrow-btn {
+    width: 72px;
+}
+
 @media screen and (max-width: 1400px) {
     .carroussel-card {
         height: 360px;
@@ -952,6 +1011,10 @@ header.scrolled {
         min-width: 48%;
         max-width: 48%;
     }
+
+    .arrow-btn {
+        width: 50px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -959,6 +1022,9 @@ header.scrolled {
         height: 420px;
         min-height: 420px;
         max-height: 420px;
+
+        padding-right: 43px;
+        padding-left: 43px;
 
         width: 100%;
         min-width: 100%;
@@ -1072,4 +1138,62 @@ header.scrolled {
 }
 
 @media screen and (max-width: 1200px) {
+}
+
+/* ------------------------------------------------------------------------------------ */
+/* Modal */
+
+.backdrop-modal {
+    background-color: rgba(0, 0, 0, .5);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+
+    height: 100%;
+    min-height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 16px;
+
+    animation-name: fade-in;
+    animation-duration: .4s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+.modal-container-div {
+    max-width: 738px;
+    width: 100%;
+
+    animation-name: fade-in;
+    animation-duration: .4s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+/* ------------------------------------------------------------------------------------ */
+/* Iframe */
+
+.video-container {
+position: relative;
+width: 100%;
+padding-top: 56.25%;
+}
+
+.video-container iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border: 0;
 }
