--- a/style/style.css
+++ b/style/style.css
@@ -539,7 +539,7 @@ textarea + .floating-label {
     transform: none;
 }
 
-.has-value + .floating-label {
+.has-value + .floating-label, .custom-input:focus + .floating-label {
     top: 6px;
     transform: none;
 }
